# FM_Team_Hundo

./: .gitignore  AGENTS.md  DECISIONS.md  FM_Team_Hundo.code-workspace  FM_Team_Hundo.sln  PROJECT_CONTEXT.md  vscode-java-workspace.md
api_docs/: README.md  commentary-overlay-api.md  compatibility.md  middleware-server-api.md  mkdocs.yml  openapi.md  plugin-middleware-protocol.md  server-api.md
bizhawk_plugin/: .gitignore
commentary/: export_acquisition_videos.sh  make_team_montage.py
commentary/obs_ws/: .gitignore  DECISIONS.md  README.md  config.example.yml  credits_scene.example.yml  pyproject.toml
commentary/obs_ws/src/fm_hundo_obs/: __init__.py  api.py  audio.py  config.py  console.py  credits.py  layout.py  logging_setup.py  main.py  managed_layout.py  mapping.py  mediamtx.py  models.py  obs.py  overlay.py  scheduler.py  simulation.py  twitch_cache.py
commentary/obs_ws/src/fm_hundo_obs/static/: credits.html  overlay.html
commentary/obs_ws/tests/: fakes.py  test_audio_obs_overlay.py  test_config_mapping_console.py  test_credits.py  test_mediamtx_layout_manager.py  test_overlay_routes.py  test_scheduler.py  test_simulation.py  test_startup_cleanup.py  test_twitch_cache.py
duckstation_patch/: README.md  patch_duckstation.py
middleware/: .gitignore  Cargo.toml  build.rs
middleware/scripts/: TEST_FM_Sentinel.bat  TEST_FM_Sentinel.sh  run_FM_Sentinel.bat  run_FM_Sentinel.sh
middleware/src/: cards.rs  main.rs
presentation/: .gitignore  README.md  build.ps1  fm-team-hundo.tex  speaker-script.md
prototype/: __init__.py  client.py  messages.py
(+204 files in other folders)
