[package]
name = "FM_Sentinel"
version = "1.0.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.6.1", features = ["cargo"] }
