[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fm-hundo-obs"
version = "0.1.0"
description = "OBS automation for FM Team Hundo live acquisition showcases."
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "PyYAML>=6.0",
    "rich>=13.7",
    "simpleobsws>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
fm-hundo-obs = "fm_hundo_obs.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

